crt: Move wctype from libmingwex.a to individual CRT import libraries
C95 wctype symbol is natively available since msvcr120.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -301,6 +301,7 @@ src_msvcrt=\
   misc/iswblank.c \
   misc/purecall.c \
   misc/wctrans.c \
+  misc/wctype.c \
   secapi/_vscprintf_p.c \
   secapi/_vscwprintf_p.c \
   secapi/_vswprintf_p.c \
@@ -672,6 +673,7 @@ src_crtdll=\
   misc/wcstoumax.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -726,6 +728,7 @@ src_msvcrt10=\
   misc/wcstoumax.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -768,6 +771,7 @@ src_msvcrt20=\
   misc/wcstoumax.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -805,6 +809,7 @@ src_msvcrt40=\
   misc/wcstoumax.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
@@ -829,6 +834,7 @@ src_msvcr70=\
   misc/wcrtomb.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_fstat64i32.c \
   stdio/fseeki64.c \
   stdio/mingw_lock.c
@@ -850,6 +856,7 @@ src_msvcr71=\
   misc/wcrtomb.c \
   misc/wctob.c \
   misc/wctrans.c \
+  misc/wctype.c \
   stdio/_fstat64i32.c \
   stdio/fseeki64.c \
   stdio/mingw_lock.c
@@ -858,23 +865,27 @@ src_msvcr80=\
   misc/imaxdiv.c \
   misc/isblank.c \
   misc/iswblank.c \
-  misc/wctrans.c
+  misc/wctrans.c \
+  misc/wctype.c
 
 src_msvcr90=\
   misc/imaxdiv.c \
   misc/isblank.c \
   misc/iswblank.c \
-  misc/wctrans.c
+  misc/wctrans.c \
+  misc/wctype.c
 
 src_msvcr100=\
   misc/isblank.c \
   misc/iswblank.c \
-  misc/wctrans.c
+  misc/wctrans.c \
+  misc/wctype.c
 
 src_msvcr110=\
   misc/isblank.c \
   misc/iswblank.c \
-  misc/wctrans.c
+  misc/wctrans.c \
+  misc/wctype.c
 
 src_msvcr120_app=\
   misc/__p___initenv.c \
@@ -944,7 +955,7 @@ src_libmingwex=\
   misc/tsearch.c         misc/twalk.c           \
   misc/wcsnlen.c         misc/wcstof.c          \
   misc/wcstold.c \
-  misc/wctype.c          misc/wdirent.c             misc/winbs_uint64.c     misc/winbs_ulong.c           misc/winbs_ushort.c    \
+  misc/wdirent.c         misc/winbs_uint64.c        misc/winbs_ulong.c      misc/winbs_ushort.c    \
   misc/wmemchr.c         misc/wmemcmp.c             misc/wmemcpy.c          misc/wmemmove.c              misc/wmempcpy.c        \
   misc/wmemset.c         misc/ftw.c                 misc/ftw64.c            misc/mingw-access.c          \
   \
