crt: Add bcryptprimitives.def for x86
Makefile.in regeneration not included, per request.

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -714,6 +714,7 @@ lib64_DATA += %reldir%/libntoskrnl.a
 lib64_DATA += %reldir%/libuxtheme.a
 lib64_DATA += %reldir%/libwtsapi32.a
 lib64_DATA += %reldir%/libbcrypt.a
+lib64_DATA += %reldir%/libbcryptprimitives.a
 lib64_DATA += %reldir%/libbthprops.a
 lib64_DATA += %reldir%/libdhcpcsvc6.a
 lib64_DATA += %reldir%/libdxva2.a
