--- a/mingw-w64-crt/lib-common/ucrtbase.def.in
+++ b/mingw-w64-crt/lib-common/ucrtbase.def.in
@@ -2596,8 +2596,7 @@ wcsncat_s
 wcsncmp
 wcsncpy
 wcsncpy_s
-; We provide replacement implementation in libmingwex
-wcsnlen DATA
+wcsnlen
 wcspbrk
 wcsrchr
 wcsrtombs
