crt: Split UCRT _getmainargs() and _wgetmainargs() functions into separate files
Every executable references only one of those functions. So if functions
are split into separate files, linker includes only the one which is used.

Replace magic numbers 2 and 1 for DoWildCard by the named enum values.

Remove check for NULL value of StartInfo because StartInfo cannot be NULL.
MS implementation of _(w)getmainargs() requires StartInfo to be valid
pointer and mingw-w64 startup code always calls _(w)getmainargs() with
non-NULL StartInfo.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -353,6 +353,8 @@ src_msvcrt_add_x86=\
 # Files included in libucrt*.a
 src_ucrtbase=\
   misc/ucrt_compat.c \
+  misc/ucrt__getmainargs.c \
+  misc/ucrt__wgetmainargs.c \
   math/_huge.c \
   misc/__badioinfo.c \
   misc/__p___initenv.c \
