crt: UCRT __dcrt_initial_narrow_environment is global variable
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/ucrtbase.def.in
+++ b/mingw-w64-crt/lib-common/ucrtbase.def.in
@@ -94,7 +94,7 @@ __current_exception
 __current_exception_context
 __daylight
 __dcrt_get_wide_environment_from_os
-__dcrt_initial_narrow_environment
+__dcrt_initial_narrow_environment DATA
 __doserrno
 __dstbias
 __fpe_flt_rounds
