crt: Move two UCRT aliases from ucrtbase.def.in to crt-aliases.def.in
In file crt-aliases.def.in are defined all UCRT symbol aliases except two.
Move those two remaning.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -484,6 +484,12 @@ F64(_wutime == _wutime64)
 #endif
 #endif
 
+; This is list of symbols which are present in msvcrt but not in UCRT
+#ifdef UCRTBASE
+__lconv_init == __initialize_lconv_for_unsigned_char
+__set_app_type == _set_app_type
+#endif
+
 ; This is list of printf/scanf symbol aliases with __ms_ prefix
 #ifndef UCRTBASE
 __ms_fprintf == fprintf
