crt: Update comment about UCRT _HUGE in crt-aliases.def.in
Since commit 527522b8b0f7b8c49760acb75fc0c6c9ce0981ee _HUGE variable is provided by math/_huge.c.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -72,7 +72,8 @@ F64(fstat == _fstat64i32)
 #endif
 ; ADD_UNDERSCORE(ftime)
 #if defined(UCRTBASE)
-; _HUGE variable is not available in ucrtbase.dll and there is no replacement for it
+; _HUGE variable is provided by math/_huge.c
+; HUGE alias is not defined
 #elif defined(CRTDLL)
 ; ADD_UNDERSCORE_DATA_DLL(HUGE)
 #else
